# instruct-online-courses

./: .gitignore  README.md  pyproject.toml
instruct_online_courses/: __init__.py  config_processing.py  generation_processing.py  main.py  settings.toml
