[tool.poetry]
name = "instruct-online-courses"
version = "0.1.0"
description = ""
authors = ["Georgii Chaikin <chaykin.georgiy217@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.7"
openai = "^1.55.0"
dynaconf = "^3.2.6"
tqdm = "^4.67.1"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
jupyterlab = "^4.3.1"

[[tool.poetry.source]]
name = "torch_gpu"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"

[tool.black]
line-length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
generate_instructions = "instruct_online_courses.main:generate_instructions"
